<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2014 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/com.android.testingcamera2"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Spinner
        android:id="@+id/target_subpane_image_reader_format_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/target_subpane_image_reader_format_prompt" />
    <Spinner
        android:id="@+id/target_subpane_image_reader_size_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/target_subpane_image_reader_size_prompt" />
    <Spinner
        android:id="@+id/target_subpane_image_reader_count_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/target_subpane_image_reader_count_prompt" />
    <ImageView
        android:id="@+id/target_subpane_image_reader_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
      <Button
          android:id="@+id/target_subpane_image_reader_prev_button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/target_subpane_image_reader_prev_button" />
      <Button
          android:id="@+id/target_subpane_image_reader_save_button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/target_subpane_image_reader_save_button" />
      <Button
          android:id="@+id/target_subpane_image_reader_next_button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/target_subpane_image_reader_next_button" />
    </LinearLayout>
</merge>
